[KT-221] Fix competition registration on smaller screens

--- a/frontend/src/app/components/competition-registration/competition-registration.component.css
+++ b/frontend/src/app/components/competition-registration/competition-registration.component.css
@@ -27,7 +27,7 @@ section {
   flex-direction: column;
 }
 
-.input-wrapper input {
+.input-wrapper select {
   width: 300px;
   height: 50px;
   border-radius: 5px;
@@ -37,7 +37,7 @@ section {
 }
 
 .input-wrapper label {
-  font-size: 23px;
+  font-size: 22px;
 }
 
 button {
@@ -66,7 +66,7 @@ p {
 }
 
 #competition-name {
-  font-size: 23px;
+  font-size: 25px !important;
 }
 
 .input-wrapper select {
@@ -77,6 +77,10 @@ p {
   font-size: 19px;
   color: var(--primary-color);
   background-color: white;
+}
+
+#competition-info p {
+  font-size: 19px;
 }
 
 form {
@@ -90,10 +94,10 @@ form {
 @media (max-width: 768px) {
   #main-div {
     width: 260px;
-    height: 350px;
+    height: 650px;
   }
 
-  .input-wrapper input {
+  .input-wrapper select {
     width: 220px;
     height: 35px;
     border-radius: 5px;
@@ -106,10 +110,19 @@ form {
   }
 
   button {
-    width: 110px;
+    width: 180px;
     height: 35px;
     background-color: white;
     color: var(--primary-color);
     font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  #competition-name {
+    font-size: 19px !important;
+  }
+
+  #competition-info p {
+    font-size: 17px;
   }
 }
